--- a/views/admin/api.pug
+++ b/views/admin/api.pug
@@ -2,7 +2,7 @@ extends ./layout
 
 block admin-header
 	i.fa.fa-sitemap
-	| API
+	= t('admin.sections.api')
 
 block admin-actions
 	button.btn.btn-teal#admin-api-new
