--- a/views/admin/components.pug
+++ b/views/admin/components.pug
@@ -2,7 +2,7 @@ extends ./layout
 
 block admin-header
 	i.fa.fa-tasks
-	| Components
+	= t('admin.sections.components')
 
 block admin-actions
 	button.btn.btn-teal#admin-components-new
