--- a/views/admin/metrics.pug
+++ b/views/admin/metrics.pug
@@ -2,7 +2,7 @@ extends ./layout
 
 block admin-header
 	i.fa.fa-bar-chart
-	| Metrics
+	= t('admin.sections.metrics')
 
 block admin-actions
 	a.btn.btn-teal(href='/admin/metrics/create')
