--- a/views/admin/subscribers.pug
+++ b/views/admin/subscribers.pug
@@ -2,7 +2,7 @@ extends ./layout
 
 block admin-header
 	i.fa.fa-bell
-	| Subscribers
+	= t('admin.sections.subscribers')
 
 block admin-content
 	.admin-box
