--- a/views/admin/templates.pug
+++ b/views/admin/templates.pug
@@ -2,7 +2,7 @@ extends ./layout
 
 block admin-header
 	i.fa.fa-copy
-	| Templates
+	= t('admin.sections.templates')
 
 block admin-actions
 	a.btn.btn-teal(href='/admin/templates/create')
