--- a/views/admin/layout.pug
+++ b/views/admin/layout.pug
@@ -1,6 +1,8 @@
 extends ../layout
 
 block head
+	script(type='text/javascript', src='/js/app.js')
+	script(type='text/javascript', src='/js/libs.admin.js')
 	script(type='text/javascript', src='/js/admin.js')
 
 block navright
@@ -20,6 +22,16 @@ block content
 						a.btn.btn-deep-orange(href='/logout')
 							span
 								i.fa.fa-sign-out
-								| Logout
+								= t('actions.logout')
 				.admin-content
 					block admin-content
+
+	script(type='text/javascript').
+		var langData = {
+			ok: "#{t('actions.ok')}",
+			cancel: "#{t('actions.cancel')}"
+		};
+		var userData = {
+			locale: "#{user.lang}",
+			timezone: "#{user.timezone}"
+		};
