--- a/views/admin/monitors.pug
+++ b/views/admin/monitors.pug
@@ -2,7 +2,7 @@ extends ./layout
 
 block admin-header
 	i.fa.fa-heartbeat
-	| Monitors
+	= t('admin.sections.monitors')
 
 block admin-actions
 	a.btn.btn-teal(href='/admin/monitors/create')
