Update Incident + UI improvements + ChartJs + Dashboard logic (3)

--- a/client/css/layout/_common.scss
+++ b/client/css/layout/_common.scss
@@ -26,8 +26,13 @@ a {
 }
 
 main {
+	display: block; // IE fix
 	background-color: material-color('grey', '50');
 	z-index: 0;
+}
+
+template {
+	display: none; // IE fix
 }
 
 .server-error {
