--- a/client/css/components/_incidents-list.scss
+++ b/client/css/components/_incidents-list.scss
@@ -46,7 +46,8 @@
 }
 
 .incident-properties {
-	background-color: lighten(material-color('blue-grey','50'), 0%);
+	background-color: lighten(material-color('blue-grey','50'), 3%);
+	border: 1px solid #FFF;
 	margin: 0;
 	padding: 9px 15px;
 	list-style-type: none;
@@ -73,13 +74,13 @@
 }
 
 .updates-list {
-	padding: 0 15px;
+	padding: 0;
 	margin: 0;
 	list-style-type: none;
 
 	> li {
 		border-top: 1px dotted material-color('blue-grey','100');
-		padding: 15px 0;
+		padding: 15px 15px;
 
 		&:first-child {
 			border-top: none;
@@ -111,6 +112,55 @@
 			font-style: normal;
 			color: material-color('blue-grey','400');
 			margin-top: 0;
+		}
+
+	}
+
+	&.past {
+
+		> li {
+			display: none;
+
+			&:first-child {
+				display: block;
+			}
+
+		}
+
+	}
+
+}
+
+.updates-list-more {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 30px;
+	font-size: 12px;
+	background-color: lighten(material-color('blue-grey','50'), 3%);
+	border: 1px solid #FFF;
+	color: material-color('blue-grey','300');
+	padding-top: 10px;
+	cursor: pointer;
+	box-shadow:
+		inset 0 1px 1px rgba(0,0,0,0.15),
+		inset 0 9px 0 -5px lighten(material-color('blue-grey','50'), 5%),
+		inset 0 9px 1px -4px rgba(0,0,0,0.15),
+		inset 0 18px 0 -10px lighten(material-color('blue-grey','50'), 4%),
+		inset 0 18px 1px -9px rgba(0,0,0,0.15);
+
+	.fa:last-child {
+		display: none;
+	}
+
+	&.reverse {
+		box-shadow: none;
+
+		.fa:first-child {
+			display: none;
+		}
+		.fa:last-child {
+			display: inline;
 		}
 
 	}
