--- a/views/admin/dashboard.pug
+++ b/views/admin/dashboard.pug
@@ -14,3 +14,5 @@ block admin-content
 	#admin-dashboard
 		.admin-box
 			= t('admin.dashboard.welcome', { name: user.firstName })
+			.chartContainer
+				canvas#chartIncidents(height="200")
