--- a/views/admin/incidents-create.pug
+++ b/views/admin/incidents-create.pug
@@ -2,83 +2,81 @@ extends ./layout
 
 block admin-header
 	i.fa.fa-bullhorn
-	| Incidents - Create
+	= t('admin.incidents.create')
 
 block admin-actions
 	a.btn.btn-indigo(href='/admin/incidents')
 		span
 			i.fa.fa-arrow-left
-			| Back to list
+			= t('actions.backToList')
 	button.btn.btn-indigo#btn-load-from-template
 		span
 			i.fa.fa-file-o
-			| Load Template
+			= t('admin.incidents.loadTemplate')
 			
 block admin-content
 	if comps.length > 0 && regions.length > 0
 		#admin-incidents-create
 			.admin-form
 				section.hidden#sct-load-from-template
-					label Load from Template...
-					+dropdown('incident-template', 'template', '')(placeholder='Choose...')
+					label= t('admin.incidents.loadTemplate') + '...'
+					+dropdown('incident-template', 'template', '')(placeholder=t('actions.choose'))
 						each tmpl in templates
 							+dropdownitem(tmpl.name, tmpl.id, 'file-o', 'grey')
 				section
-					label Summary
-					input#incident-summary(type='text', placeholder='Incident Summary', v-model='summary')
+					label= t('admin.incidents.summary')
+					input#incident-summary(type='text', placeholder=t('admin.incidents.summary_placeholder'), v-model='summary')
 				section
-					label Type
+					label= t('admin.incidents.type')
 					input#schedule_unplanned(name='schedule', type='radio', v-model='type', value='unplanned', checked)
-					label(for='schedule_unplanned') Unplanned Incident
+					label(for='schedule_unplanned')= t('admin.incidents.typeUnplanned')
 					input#schedule_planned(name='schedule', type='radio', v-model='type', value='scheduled')
-					label(for='schedule_planned') Scheduled Maintenance
+					label(for='schedule_planned')= t('admin.incidents.typeScheduled')
 				section
 					.grid
 						.col-8_md-12(v-show='type=="unplanned"')
-							label Started on
-							input.datepicker#schedule_actual_start(type='text', placeholder='YYYY/MM/DD', v-model='schedule_actual_start')
-							|  at 
-							input.timepicker#schedule_actual_start_time(type='text', placeholder='HH:MM', v-model='schedule_actual_start_time')
+							label= t('admin.incidents.startedOn')
+							input.datepicker#schedule_actual_start(type='text', placeholder= t('admin.incidents.date_placeholder'), v-model='schedule_actual_start')
+							= ' ' + t('admin.incidents.datetimeSeparator') + ' '
+							input.timepicker#schedule_actual_start_time(type='text', placeholder= t('admin.incidents.time_placeholder'), v-model='schedule_actual_start_time')
 						.col-8_md-12(v-show='type=="scheduled"')
-							label Scheduled to start on
-							input.datepicker#schedule_planned_start(type='text', placeholder='YYYY/MM/DD', v-model='schedule_planned_start')
-							|  at 
-							input.timepicker#schedule_planned_start_time(type='text', placeholder='HH:MM', v-model='schedule_planned_start_time')
-							|  and end on 
-							input.datepicker#schedule_planned_end(type='text', placeholder='YYYY/MM/DD', v-model='schedule_planned_end')
-							|  at 
-							input.timepicker#schedule_planned_end_time(type='text', placeholder='HH:MM', v-model='schedule_planned_end_time')
+							label= t('admin.incidents.scheduledStartOn')
+							input.datepicker#schedule_planned_start(type='text', placeholder= t('admin.incidents.date_placeholder'), v-model='schedule_planned_start')
+							= ' ' + t('admin.incidents.datetimeSeparator') + ' '
+							input.timepicker#schedule_planned_start_time(type='text', placeholder= t('admin.incidents.time_placeholder'), v-model='schedule_planned_start_time')
+							= ' ' + t('admin.incidents.scheduledEndOn') + ' '
+							input.datepicker#schedule_planned_end(type='text', placeholder= t('admin.incidents.date_placeholder'), v-model='schedule_planned_end')
+							= ' ' + t('admin.incidents.datetimeSeparator') + ' '
+							input.timepicker#schedule_planned_end_time(type='text', placeholder= t('admin.incidents.time_placeholder'), v-model='schedule_planned_end_time')
 						.col-4_md-12
-							label Reference Timezone
+							label= t('admin.incidents.timezone')
 							+dropdown('incident-timezone', 'timezone', user.timezone)(placeholder=user.timezone)
 								each tz in moment.tz.names()
 									+dropdownitem(tz, tz, 'clock-o', 'blue-grey', moment().tz(tz).format('Z z'))
 				section
-					label Component
-					+dropdown('incident-component', 'component', '')(placeholder='Choose...')
+					label= t('admin.incidents.component')
+					+dropdown('incident-component', 'component', '')(placeholder= t('actions.choose'))
 						each comp in comps
 							+dropdownitem(comp.name, comp.id, 'tasks', 'grey', comp.group.name)
 				section(v-show='type!="scheduled"')
-					label Component State
-					+dropdown('incident-component', 'componentState', 'partialdown')(placeholder='Partial Outage')
+					label= t('admin.incidents.componentState')
+					+dropdown('incident-component', 'componentState', 'partialdown')(placeholder=t('states.partialdown'))
 						each stVal, stKey in appdata.states
 							if stKey !== 'scheduled'
-								+dropdownitem(stVal, stKey, 'circle', 'none status-' + stKey)
+								+dropdownitem(t('states.' + stKey), stKey, 'circle', 'none status-' + stKey)
 				section
-					label Region(s)
+					label= t('admin.incidents.regions')
 					each region in regions
 						input(id='region-' + region.id, type='checkbox', v-model='regions', value=region.id)
 						label(for='region-' + region.id)= region.name
 				section
-					label Content
+					label= t('admin.incidents.content')
 					textarea#incident-editor
 				section.form-footer
 					button.btn.btn-green#admin-incidents-save
 						span
 							i.fa.fa-check
-							| Save Incident
+							= t('admin.incidents.save')
 	else
 		.admin-box
-			| You must create a least one component
-			strong  and 
-			| one region to create an incident!
+			!= t('admin.incidents.missingCompRegion')
