--- a/views/admin/layout.pug
+++ b/views/admin/layout.pug
@@ -1,8 +1,8 @@
 extends ../layout
 
 block head
-	script(type='text/javascript', src='/js/app.js')
 	script(type='text/javascript', src='/js/libs.admin.js')
+	script(type='text/javascript', src='/js/app.js')
 	script(type='text/javascript', src='/js/admin.js')
 
 block navright
@@ -13,7 +13,7 @@ block content
 		.grid
 			.col-3_sm-12
 				include ./sd
-			.col
+			.col-9_sm-12
 				.admin-header
 					h1
 						block admin-header
