--- a/views/dashboard/dashboard.pug
+++ b/views/dashboard/dashboard.pug
@@ -1,5 +1,9 @@
 extends ../layout
 
+block head
+	script(type='text/javascript', src='/js/libs.client.js')
+	script(type='text/javascript', src='/js/app.js')
+
 block navright
 	if pdata.componentGroups
 		button
@@ -52,10 +56,10 @@ block content
 					h2
 						i.fa.fa-bullhorn
 						= t('headers.incidents')
-					if pdata.incidents
+					if pdata.incidents.active
 						.box
 							ul.incidents-list
-								each inc in pdata.incidents
+								each inc in pdata.incidents.active
 									li
 										h3(class='status-' + inc.state)
 											span= inc.summary
@@ -81,7 +85,7 @@ block content
 										ul.updates-list
 											each upd in inc.updates
 												li
-													strong= upd.status
+													strong= t('updateStates.' + upd.status)
 													span= upd.content
 													em= moment.tz(upd.postedDate, 'UTC').format('lll z')
 					else
@@ -90,8 +94,44 @@ block content
 					h2
 						i.fa.fa-history
 						= t('headers.pastincidents')
-					.box.no-content
-						| No recent past incidents.
+					if pdata.incidents.recent
+						.box
+							ul.incidents-list
+								each inc in pdata.incidents.recent
+									li
+										h3(class='status-' + inc.state)
+											span= inc.summary
+											+stateicon(inc.state)
+										ul.incident-properties
+											li
+												- var comp = pdata.components[inc.component]
+												strong Component:
+												span= comp.name + ' - ' + comp.group.name
+											li
+												strong Severity:
+												span= t('states.' + inc.state)
+											li
+												strong Affected Regions:
+												span
+													each reg, idx in inc.regions
+														if idx > 0 && idx < inc.regions.length - 1
+															| , 
+														else if idx > 0 && idx >= inc.regions.length - 1
+															= ' ' + t('dashboard.affectedRegionsAnd') + ' '
+														a(href='/region/' + reg._id)= reg.name
+
+										ul.updates-list.past
+											each upd in inc.updates
+												li
+													strong= t('updateStates.' + upd.status)
+													span= upd.content
+													em= moment.tz(upd.postedDate, 'UTC').format('lll z')
+										.updates-list-more
+											i.fa.fa-chevron-down
+											i.fa.fa-chevron-up
+					else
+						.box.no-content
+							| No recent past incidents.
 			.col
 				section
 					h2
