Edit Incident UI

--- a/client/css/layout/_common.scss
+++ b/client/css/layout/_common.scss
@@ -45,6 +45,10 @@ template {
 
 }
 
+.CodeMirror, .CodeMirror-scroll {
+	min-height: 100px;
+}
+
 // ========================================
 // Animations
 // ========================================
